# users-service

./: README.md  config.py  docker-compose.yml  requirements.txt  setup.cfg  start.sh
.circleci/: config.yml
tests/: __init__.py  conftest.py  test_admin.py  test_block.py  test_feedbacks.py  test_follower.py  test_genre_creation.py  test_homeinfo.py  test_language_creation.py  test_level_creation.py  test_report_type_creation.py  test_reports.py  test_user_login.py  test_user_register.py  test_user_status.py
usersServiceApp/: __init__.py  commands.py  database.py  model.py
usersServiceApp/Errors/: usersException.py
usersServiceApp/api/: admin.py  block.py  feedback.py  follower.py  genre.py  home_info.py  language.py  level.py  login.py  report.py  report_type.py  user.py
usersServiceApp/core/: admin_logic.py  block_logic.py  disabled_account_logic.py  feedback_logic.py  follower_logic.py  login_logic.py  register_logic.py  report_logic.py  user_status_logic.py
usersServiceApp/errors/: adminError.py  genreError.py  languageError.py  levelError.py  reportError.py  usersDBError.py  usersError.py
usersServiceApp/infra/: __init__.py  db_admin.py  db_block.py  db_disabled_account.py  db_feedback.py  db_follower.py  db_genre.py  db_language.py  db_level.py  db_log.py  db_profile_picture.py  db_reports.py  db_user.py  db_user_status.py
usersServiceApp/templates/: home.html
