[metadata]
name = users-service
version = 0.0.0
license = T2
description = Backend for Get Fluent users service

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    usersServiceApp
